Fix 'generate keys..' visibility

--- a/web/saito/css-imports/saito-header.css
+++ b/web/saito/css-imports/saito-header.css
@@ -266,6 +266,10 @@
   text-overflow: ellipsis;
 }
 
+.profile-public-key.generate-keys {
+  width: 100%;
+}
+
 
 .hamburger-container {
   display: flex;
